Make sure that nsString and nsString_external are the same size. b=430581 r=benjamin